estudiando. Solo formateo para claridad

--- a/02 LM en entornos web/00html5.html
+++ b/02 LM en entornos web/00html5.html
@@ -8,8 +8,11 @@
 	<style>
 header {
     width: 100%;
-    height: 100px;
+    height: 10%;            /* por qué no muestra nada en la pagina? */
+    /* height: 100px; */
     background-color: pink;
+    /* border: crimson solid 2px; */
+    /* padding: 2% 2%; */
 }
 nav {
     width: 100%;
@@ -36,10 +39,22 @@ footer {
     background-color:rgb(95, 160, 95);
     clear:both;   
 }
+html {
+    background-color: black;
+}
+body {
+    border: white 2px solid;
+}
+/* .centrado{
+    text-align: center;
+    color: blue;
+    padding: 2% 2% 2% 2%;
+    
+} */
 	</style>
 </HEAD> 
 <BODY>
-    <HEADER></HEADER>
+    <HEADER class="centrado"></HEADER>
 	<NAV></NAV>
 	<MAIN>
         <section>
