--- a/02 LM en entornos web/00index.html
+++ b/02 LM en entornos web/00index.html
@@ -9,5 +9,27 @@
 </HEAD>
 <BODY>
 Cuerpo de la página
+
+	<header></header>
+	<nav></nav>
+	<main>
+		<section>
+			<article><div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex omnis nostrum, porro rem aspernatur enim quidem atque temporibus, harum qui facilis possimus voluptas dicta ut assumenda? Eum alias veritatis aut!</div></article>
+			<article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis eligendi voluptatibus vitae, iure doloribus non unde, fuga alias vel repellendus eveniet aliquam nostrum distinctio sed, dolorem necessitatibus? Dicta, possimus id.
+			In distinctio natus doloribus quia, necessitatibus inventore beatae dolore eveniet provident accusamus aperiam nesciunt. Eius reprehenderit laudantium consequuntur sunt error dolore aliquam reiciendis, dignissimos iste soluta asperiores deserunt nemo labore?
+			Laborum quaerat amet necessitatibus pariatur veniam atque debitis sequi sed nostrum fuga sint voluptas vitae, optio ad maxime facilis minima molestias obcaecati similique exercitationem delectus dolor sit! Deleniti, et impedit!
+			Tenetur est, facilis vel, eius, adipisci qui blanditiis nemo inventore unde quae dolores praesentium nisi deserunt quibusdam dignissimos earum fugiat molestias modi nulla repellat veritatis? Fuga illo repellendus fugiat esse.
+			Libero voluptate quos sint repellat tempora praesentium ipsa in natus exercitationem? Minima soluta vero minus delectus illum sit, maiores est quos aliquam, laudantium beatae dignissimos officia, molestiae cupiditate expedita mollitia.</article>
+			<article></article>
+		</section>
+		<section>
+			<article></article>
+			<article></article>
+			<article></article>
+		</section>
+	</main>
+	<aside></aside>
+	<footer></footer>
+
 </BODY>
 </HTML>
