--- a/02 LM en entornos web/02Atributos.html
+++ b/02 LM en entornos web/02Atributos.html
@@ -6,7 +6,7 @@
     <STYLE>
     hr {
         background-color: #491134;
-        height:10px;
+        height:20px;
         width: 50%;
         border:10px solid blue;
         border-radius:50px;
@@ -19,9 +19,10 @@
     con formato deben ponerse usando ESTILOS-->
 <HR>    
     <P>lo que viene es un enlace
-<A href="https://www.w3schools.com/"
-  title="El mejor tutorial HTML" target="_blank">
-    HTML5. Todos las etiquetas y atributos</A> 
- ¿te ha gustado?</P>
+        <A href="https://www.w3schools.com/"
+        title="El mejor tutorial HTML" target="_blank">
+        HTML5. Todas las etiquetas y atributos</A> 
+        ¿te ha gustado?
+    </P>
 </BODY>
 </HTML>
