--- a/02 LM en entornos web/05Textos2.html
+++ b/02 LM en entornos web/05Textos2.html
@@ -16,9 +16,11 @@
     </blockquote>
     <blockquote> <!-- tabula a la derecha-->
         <p>Empiezo la cita. La historia nos muestra un hombre valiente, capaz de todo por amor, 
-        parece que no se cansará nunca de luchar.</p>
+        parece que no se cansará nunca de luchar.
+        </p>
         <p>Este es un ejemplo, para nosotros porque a veces pensamos que el amor es 
-            algo simple, y no somos tan valientes, para luchar por él.</p>
+            algo simple, y no somos tan valientes, para luchar por él.
+        </p>
     </blockquote>
     <DIV>Un refrán que siempre me llamó la atención.
         <CITE>No por mucho madrugar, amanece más temprano.</CITE>
@@ -38,7 +40,7 @@
     </DIV>
     <p>El programa que se está analizando es el siguiente</p>
         <var>int x;</var><br>
-        <var>int y;</var></p>
+        <var>int y;</var>
     <p>Se ha solicitado la creación de dos variables</p>
     <p>El programa que se está analizando es el siguiente</p>
         <code>printf("Hola Mundo Web");</code>
