--- a/02 LM en entornos web/05textoSemantico.html
+++ b/02 LM en entornos web/05textoSemantico.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Texto Semántico</title>
     <style>
-        span { font-style: italic;
-        color:red; }
+        span { 
+            font-style: italic;
+            color:red; 
+        }
 
     </style>
 </head>
 <body>
-    <P>No olvides nunca <EM>separar contenido 
-       de formato</EM></P>
+    <P>No olvides nunca <EM>separar contenido de formato</EM></P>
     <P>No olvides nunca <SPAN>separar contenido de formato</SPAN></P>
-    <P>No olvides nunca <I>separar contenido de
-        formato</I></P>
+    <P>No olvides nunca <I>separar contenido de formato</I></P>
     <HR>
     <DETAILS>
         <SUMMARY>Usabilidad</SUMMARY>
