--- a/02 LM en entornos web/CSS01.html
+++ b/02 LM en entornos web/CSS01.html
@@ -8,10 +8,21 @@
     color:red;
     text-transform: uppercase;
   }
+  body {
+    border: tomato 2px solid;
+  }
 </STYLE>
 </HEAD> 
 <BODY> 
-  Hola
+  <section>
+    <article>Hola 11</article>
+    <article>Hola 12</article>
+  </section>
+  <section>
+    <article>Hola 21</article>
+    <article>Hola 22</article>
+  </section>
+  <div>Hola 01</div> <div>Hola 02</div>
   <HR>
   <CODE>x=y</CODE>
   <P>Hola <CODE>x=y</CODE></P>
