--- a/02 LM en entornos web/CSS10a.html
+++ b/02 LM en entornos web/CSS10a.html
@@ -5,22 +5,31 @@
 </HEAD> 
 <BODY> 
     <div class="caja1">
-    Hola estoy aquí1
+        Hola soy la caja numero 1
     </div>
+
     <div class="caja2">
-    Hola estoy aquí2 fsakjd klsdj klasjdkasdsjd kasjdkasj 
+        Hola soy la caja numero 2
     </div>
+
     <hr>
+
     <div class="caja3">
-    Hola estoy aquí
+        Hola soy la caja numero 3
     </div>
+
     <div class="caja4">
-    Hola estoy aquí
+        Hola soy la caja numero 4
     </div>
+    
     <hr>
+    
     <div class="caja5">
-    Hola estoy aquí
+        Hola soy la caja numero 5
     </div>
-    <div class="caja6"></div>
+
+    <div class="caja6">
+
+    </div>
 </BODY>
 </HTML>
