correcciones en clase

--- a/antes_EXAM_dic/cssEjercicio2.html
+++ b/antes_EXAM_dic/cssEjercicio2.html
@@ -18,8 +18,8 @@
         <div>
             <ul id="menu">
                 <li><a href="#">Strong</a></li>
-                <!-- <li><a href="#">Mark</a></li> -->
-                <!-- <li><a href="#">Span</a></li> -->
+                <li><a href="#">Mark</a></li> 
+                <li><a href="#">Span</a></li> 
                 
             </ul>
         </div>
