trabajando en casa

--- a/ejerciciogeneral/ejercicio_general.html
+++ b/ejerciciogeneral/ejercicio_general.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="ejercicio_general.css">
     <title>Ejercicio General</title>
 </head>
-    <h1>ilupics</h1>
-    <h2>Ejemplos de ilustraciones sin más</h2>
-    <nav>
-        <img src="menu.png" alt="menú hamburguesa">
-        <ul>
-            <li>AUTORES</li>
-            <li>OBRAS</li>
-            <li>BLOG</li>
-        </ul>
-    </nav>
 <body>
+    <header>
+        <h1>ilupics</h1>
+        <h2>Ejemplos de ilustraciones sin más</h2>
+        <img src="menu.png" alt="menú hamburguesa">
+        <nav>
+            <ul>
+                <li><a href="#">AUTORES</a></li>
+                <li><a href="#">OBRAS</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <figure>
