--- a/unidad_03/verticalgardendesign.html
+++ b/unidad_03/verticalgardendesign.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio_04</title>
+    <style>
+        ul { 
+            list-style:none;
+        }
+        li { 
+            padding: .6% 0;
+        }
+        li a{
+            font-weight: bolder;
+            font-variant: small-caps;
+            font-size: x-large;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <nav>
